# phira-mp

./: README.zh-CN.md
.github/workflows/: ci.yml
phira-mp-client/src/: lib.rs
phira-mp-common/: Cargo.toml
phira-mp-common/src/: bin.rs  command.rs  lib.rs
phira-mp-server/: Cargo.toml
phira-mp-server/src/: main.rs  room.rs  server.rs  session.rs
