[package]
name = "phira-mp-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["stream"]
stream = ["dep:tokio", "dep:tracing", "dep:hkdf", "dep:sha2"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
byteorder = "1.4.3"
half = "~2.7.1"
tap = "1.0.1"
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.26"
serde_json = "1.0"

# Optional deps — only needed for Stream (server/proxy use, not WASM)
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "rt", "net", "io-util", "time", "sync"], optional = true }
tracing = { version = "0.1.37", optional = true }
sha2 = { version = "0.10.9", optional = true }
hkdf = { version = "0.12.4", features = ["std"], optional = true }

phira-mp-macros = { path = "../phira-mp-macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.3.3", features = ["v4", "js"] }
